fix imutable list issue